--- a/src/App.scss
+++ b/src/App.scss
@@ -10,3 +10,8 @@ a {
   color: #f8b700;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
+
+.loginButton {
+  margin-left: auto;
+  margin-right: 20px;
+}
