--- a/src/App.scss
+++ b/src/App.scss
@@ -10,3 +10,13 @@ a {
   color: #f8b700;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
+
+// This is a super dumb way to prevent the
+// detail panel icons column from getting really big
+thead {
+  tr:first-child {
+    th:first-child {
+      width: 1px;
+    }
+  }
+}
